﻿The idea is to record here changes that deserve mentioning in
the release notes, as we make them, to make the release process easier.

Next version:

2.6 (????-??-??)

* support table of contents and links in ebook UI
* added a document measurement helper (invoke by pressing M)
* swapped keybindings:
  * F11 : Fullscreen mode (still also Ctrl+Shift+L)
  * F5  : Presentation mode (also Shift+F11, still also Ctrl+L)
* deprecated the browser plugin (remains installed if used)
* support LZMA and PPMd compression in Comic Book (CBZ) files
* allow saving Comic Book files as PDF
* new advanced settings: UseTabs (to be exposed eventually), ShowSingleTab, FullPathInTitle
* replaced non-free UnRAR with a free RAR extraction library
  (if some CBR files fail to open for you, please download unrar.dll from
  http://www.rarlab.com/rar_add.htm and place it alongside SumatraPDF.exe)
* removed support for reading sumatrapdfprefs.dat (when updating from a version prior to
  version 2.3, please upgrade to 2.5.2 first and have that convert your settings to the
  format introduced in version 2.3 before updating to a later version)

2.5.2 (2014-05-13)

* use less memory for comic book files
* PDF rendering improvements

2.5.1 (2014-05-07):

* hopefully fix frequent ebook crashes

2.5 (2014-05-05):

* 2 page view for ebooks
* new keybindings:
  * Ctrl+PgDn, Ctrl+Right : go to next page
  * Ctrl+PgUp, Ctrl+Left  : go to previous page
* 10x faster ebook layout
* support JP2 images
* new advanced settings: ShowMenuBar, ReloadModifiedDocuments, CustomScreenDPI
* left/right clicking no longer changes pages in fullscreen mode
  (use Presentation mode if you rely on this feature)
* fixed multiple crashes

2.4 (2013-10-01):

* full-screen mode for ebooks (Ctrl-L)
* new key bindings:
  * F9 - show/hide menu (not remembered after quitting)
  * F8 - show/hide toolbar
* support WebP images
* support for RAR5 compressed comic books
* fixed multiple crashes

2.3.2 (2013-05-25):
