@@ -185,9 +185,6 @@ ReloadModifiedDocuments = true
 <span class=cm id="FullPathInTitle">if true, we show the full path to a file in the title bar (introduced in version 2.6)</span>
 FullPathInTitle = false
 
-<span class=cm id="UseTabs">if true, documents are opened in tabs instead of new windows (introduced in version 2.6)</span>
-UseTabs = true
-
 <span class=cm id="ShowSingleTab">if false, the tab bar is hidden if there's only a single tab (introduced in version 2.6)</span>
 ShowSingleTab = true
 
@@ -307,6 +304,9 @@ TocDy = 0
 
 <span class=cm id="ShowStartPage">if true, we show a list of frequently read documents when no document is loaded</span>
 ShowStartPage = true
+
+<span class=cm id="UseTabs">if true, documents are opened in tabs instead of new windows (introduced in version 2.6)</span>
+UseTabs = true
 
 <span class=cm id="FileStates">information about opened files (in most recently used order)</span>
 FileStates [
